# 5073.3_TASCA3

./: Arbre_model.pkl  Knn_model.pkl  Regresio_model.pkl  Svm_model.pkl  pyproject.toml  scaler.pkl
Models/: Prediccio.py  app.py
Models/templates/: index.html  results.html
