[tool.poetry]
name = "5073-3-tasca"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "5073"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.2"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
